home section completed

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Anik|Portfolio</title>
+    <title>Anik | Portfolio</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -14,6 +14,17 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    
+    <section class="home-section">
+        <div class="half-width">
+            <img src="images/bw-image-01.png" alt="">
+        </div>
+        <div class="half-width">
+            <h3><span class="colorized">Anik Sarkar</span></h3>
+            <h1 class="Intro-title">I'm a Web</h1>
+            <h1 class="Intro-title"> <span class="colorized">Developer</span></h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore distinctio deserunt natus nisi repellat nemo inventore est similique laboriosam quidem consequatur, neque, recusandae et sapiente quam veniam praesentium perspiciatis amet.</p>
+            <a class="cv-link" href="https://www.linkedin.com/in/anik-sarkar-nits/" target="_blank" rel="noopener noreferrer">Download CV</a>
+        </div>
+    </section>
   </body>
 </html>
