about me section completed

--- a/index.html
+++ b/index.html
@@ -15,16 +15,53 @@
   </head>
   <body>
     <section class="home-section">
-        <div class="half-width">
-            <img src="images/bw-image-01.png" alt="">
-        </div>
-        <div class="half-width">
-            <h3><span class="colorized">Anik Sarkar</span></h3>
-            <h1 class="Intro-title">I'm a Web</h1>
-            <h1 class="Intro-title"> <span class="colorized">Developer</span></h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore distinctio deserunt natus nisi repellat nemo inventore est similique laboriosam quidem consequatur, neque, recusandae et sapiente quam veniam praesentium perspiciatis amet.</p>
-            <a class="cv-link" href="https://www.linkedin.com/in/anik-sarkar-nits/" target="_blank" rel="noopener noreferrer">Download CV</a>
-        </div>
+      <div class="half-width">
+        <img src="images/bw-image-01.png" alt="" />
+      </div>
+      <div class="half-width">
+        <h3><span class="colorized">Anik Sarkar</span></h3>
+        <h1 class="Intro-title">I'm a Web</h1>
+        <h1 class="Intro-title"><span class="colorized">Developer</span></h1>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore
+          distinctio deserunt natus nisi repellat nemo inventore est similique
+          laboriosam quidem consequatur, neque, recusandae et sapiente quam
+          veniam praesentium perspiciatis amet. Lorem ipsum dolor sit, amet
+          consectetur adipisicing elit. Repellendus omnis dolor nihil, fuga
+          eligendi asperiores voluptates beatae aut quod soluta!
+        </p>
+        <a
+          class="cv-link"
+          href="https://www.linkedin.com/in/anik-sarkar-nits/"
+          target="_blank"
+          rel="noopener noreferrer"
+          >Download CV</a
+        >
+      </div>
+    </section>
+    <section class="about-me">
+      <div class="half-width about-me-text">
+        <h2>About <span class="colorized-me"> Me</span></h2>
+        <h3>Hello! I'm Anik</h3>
+        <p class="about-me-details">
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem ad,
+          ratione libero aliquid quae ipsa, molestiae, aliquam corrupti nam
+          delectus perspiciatis quo suscipit qui sit consequatur laborum.
+          Reiciendis, ad qui. Lorem ipsum dolor sit amet consectetur adipisicing
+          elit. Praesentium qui porro, minus provident a similique nostrum velit
+          quo asperiores maiores!
+        </p>
+        <a
+          class="Contact-link"
+          href="https://www.linkedin.com/in/anik-sarkar-nits/"
+          target="_blank"
+          rel="noopener noreferrer"
+          >Contact ME</a
+        >
+      </div>
+      <div class="half-width">
+        <img src="images/image-02.png" alt="" />
+      </div>
     </section>
   </body>
 </html>
