services and footer added

--- a/index.html
+++ b/index.html
@@ -63,5 +63,45 @@
         <img src="images/image-02.png" alt="" />
       </div>
     </section>
+    <section class="services-section">
+      <div class="service-title">
+        <h2><span id="service-heading">Services</span></h2>
+        <h4 class="colorized"><span>All your <span class="colorized">digital need</span> covered!</span></h4>
+      </div>
+      <div class="service-container">
+        <div class="one-third">
+          <h2 class="main-heading">Graphic Design</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iure quam,
+            quo doloribus provident aut perferendis ratione reiciendis corporis
+            illo quis ea animi explicabo veritatis tenetur quidem facilis soluta
+            sed. Deserunt.
+          </p>
+        </div>
+        <div class="one-third">
+          <h2 class="main-heading">Web Development</h2>
+          <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Inventore
+            porro in possimus! Maiores, harum. Quidem quibusdam deleniti
+            voluptatum dolor! Corrupti odio quos totam temporibus dolor ex ipsum
+            in facere sed.
+          </p>
+        </div>
+        <div class="one-third">
+          <h2 class="main-heading">Content Writing</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores,
+            aut? Velit, quidem vero eum rem architecto excepturi qui fugit,
+            cupiditate voluptatum blanditiis beatae consequuntur! Ut, illo cum!
+            Nisi, et voluptate.
+          </p>
+        </div>
+      </div>
+    </section>
+    <section>
+        <footer id="footer-section">
+            <p id="footer-content">@Anik Sarkar - 2022</p>
+        </footer>
+    </section>
   </body>
 </html>
