little issues fixed

--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@
         </div>
       </div>
     </section>
-    <section>
-        <footer id="footer-section">
+    <section  id="footer-section">
+        <footer>
             <p id="footer-content">@Anik Sarkar - 2022</p>
         </footer>
     </section>
