little issues fixed

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         >
       </div>
       <div class="half-width">
-        <img src="images/image-02.png" alt="" />
+        <img id="second image" src="images/image-02.png" alt="" />
       </div>
     </section>
     <section class="services-section">
